- Enh #2068: CTimestampBehavior::timestampExpression can now be a DB expression (Qiang)
- Enh #2105: Added CButtonCOlumn::afterDelete so that a custom javascript function can be called after the delete function (mdomba)
- Enh #2125: Added memcached check and hint to requirements checker (Sam Dark)
- Enh #2143: Added htmlOptions to CTreeView::data so that additional options could be set for any tree view node (mdomba)
- Enh: Added CGridView::ajaxUpdateError for the possibility to use a custom ajax error handler (mdomba)
- Enh: Allowed using CController instead of Controller with webapp generated application (Sam Dark)
- Enh: Added CController::createInlineAction, CInlineAction::inputParams and errorMessage to allow easier override (Qiang)
- Enh: Added ability to perform Relational query without getting related models (creocoder, Sam Dark)
- Enh: Error page now displays associative array keys in parameter list (Sam Dark)
- Chg #2001: CGridView now renders footer after the body content (Qiang)
- Chg #2144: Upgraded jQuery UI to version 1.8.10 (Sam Dark)
- Chg #2148: Upgraded jQuery to version 1.5.1 (Sam Dark)
- Chg: jQuery UI now uses minified CSS (Sam Dark)
- New: Added support for query caching (Qiang)

Version 1.1.6 January 16, 2011
------------------------------
- Bug #997: Fixed the bug that relational AR query with page-by and sorting may fail to work for SQL Server (Qiang)
- Bug #1775: Fixed the bug that AR and Gii may fail for tables not in default schema in Oracle DB (Qiang)
- Bug #1790: Fixed the bug that CJSON::encode may generate invalid encoding result when data contains float numbers (Qiang)
- Bug #1799: Fixed the bug that CJuiDatePicker::$name may cause a PHP error (Y!!)
- Bug #1819: CHttpRequest::getPathInfo() now respects encoded characters (Sam Dark, creocoder)
- Bug #1851: CFileHelper::getMimeType() was causing an error if used with PHP 5.2 and PECL fileinfo extension (Sam Dark)