@@ -31,6 +31,7 @@ Version 1.1.7 to be released
 - Enh #2068: CTimestampBehavior::timestampExpression can now be a DB expression (Qiang)
 - Enh #2105: Added CButtonCOlumn::afterDelete so that a custom javascript function can be called after the delete function (mdomba)
 - Enh #2125: Added memcached check and hint to requirements checker (Sam Dark)
+- Enh #2133: Set default focus to the password input for Gii login page (Qiang)
 - Enh #2143: Added htmlOptions to CTreeView::data so that additional options could be set for any tree view node (mdomba)
 - Enh: Added CGridView::ajaxUpdateError for the possibility to use a custom ajax error handler (mdomba)
 - Enh: Allowed using CController instead of Controller with webapp generated application (Sam Dark)
